# together-python

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  log1.txt  mypy.ini  pyproject.toml  setup.py  some.py  test.py  testin.py  tox.ini  unified_joke_explanations.jsonl
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: _integration_tests.yml  _tests.yml  check_code_quality.yml  rdme-docs.yml  upload-to-pypi.yml
docs/together/: client.html  constants.html  downloadmanager.html  error.html  index.html  together_response.html  utils.html  version.html
docs/together/abstract/: api_requestor.html  index.html
docs/together/resources/: completions.html  embeddings.html  files.html  finetune.html  images.html  index.html  models.html
docs/together/resources/chat/: completions.html  index.html
docs/together/types/: abstract.html  chat_completions.html  common.html  completions.html  embeddings.html  files.html  finetune.html  index.html
examples/: antihallucination.jsonl  code_interpreter_demo.py  jokes_dataset.json  jokes_example.py  tokenize_data.py
scripts/: .gitignore  generate_api_client.py  openapi.yaml
src/cli/: cli.py
src/commands/: api.py  files.py  finetune.py  inference.py
src/together/: __init__.py  _client.py  _constants.py  _utils.py  api.py  cli.py  client.py  complete.py  config.py  constants.py  downloadmanager.py  embeddings.py  engine.py  error.py  filemanager.py  files.py  finetune.py  image.py  inference.py  models.py  together_response.py  types.py  utils.py  version.py
src/together/abstract/: __init__.py  api_requestor.py
src/together/cli/: cli.py
src/together/cli/api/: chat.py  completions.py  endpoints.py  evaluation.py  files.py  finetune.py  images.py  inference.py  models.py  utils.py
src/together/commands/: api.py  chat.py  complete.py  embeddings.py  files.py  finetune.py  image.py  inference.py  models.py
src/together/legacy/: complete.py  embeddings.py  files.py  finetune.py  images.py  models.py
src/together/resources/: __init__.py  batch.py  code_interpreter.py  completions.py  embeddings.py  endpoints.py  evaluation.py  files.py  finetune.py  images.py  models.py  rerank.py  videos.py
src/together/resources/audio/: __init__.py  speech.py  transcriptions.py  translations.py  voices.py
src/together/resources/chat/: __init__.py  completions.py
src/together/tools/: multi_part_download.py  types.py
src/together/types/: __init__.py  _abstract.py  abstract.py  audio_speech.py  batch.py  chat_completions.py  code_interpreter.py  common.py  completions.py  embeddings.py  endpoints.py  evaluation.py  files.py  finetune.py  images.py  models.py  videos.py
src/together/utils/: __init__.py  _log.py  api_helpers.py  conversation.py  files.py  tools.py  utils.py
tests/: README.md  test_client.py  test_files.py  test_finetune.py
tests/integration/: constants.py
tests/integration/resources/: generate_hyperparameters.py  test_completion.py  test_completion_stream.py  test_transcriptions.py  test_voices.py
tests/integration_tests/: generate_hyperparameters.py  test_completion.py
tests/unit/: test_async_client.py  test_cli_utils.py  test_client.py  test_code_interpreter.py  test_evaluation_resources.py  test_files_checks.py  test_files_upload_routing.py  test_finetune_resources.py  test_imports.py  test_multipart_upload_manager.py  test_preference_openai.py  test_video_url.py
tests/unit_tests/: test_client.py
together/src/: finetune.py  inference.py
