[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "together"
version = "0.2.4"
authors = [
  { name="Together Computer", email="community@together.xyz" },
]
description = "Python client for Together's Cloud Platform!"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "typer",
    "requests",
    "tqdm",
    "sseclient-py==1.7.2",
]

[project.optional-dependencies]
quality = ["black~=23.1", "ruff>=0.0.241,<=0.0.259", "mypy>=1.3.0", "types-requests>=2.31.0.1", "types-tqdm>=4.65.0.0",]

[project.urls]
"Homepage" = "https://github.com/togethercomputer/together"
"Bug Tracker" = "https://github.com/togethercomputer/together/issues"

[project.scripts]
together = "together.cli.cli:main"

[tool.black]
target-version = ['py310']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["together"]

[mypy]
strict = true
mypy_path = "."
