[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "together"
version = "0.2.9"
authors = [
  "Together AI <support@together.ai>"
]
description = "Python client for Together's Cloud Platform!"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
repository = "https://github.com/togethercomputer/together"
homepage = "https://github.com/togethercomputer/together"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.9.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
sseclient-py = "^1.7.2"
tabulate = "^0.9.0"
pydantic = "^2.5.0"

[tool.poetry.group.quality]
optional = true

[tool.poetry.group.quality.dependencies]
black = "^23.1"
ruff = "^0.0.241" 
mypy = "^1.3.0"
types-requests = "^2.31.0.1"
types-tqdm = "^4.65.0.0"
types-tabulate = "^0.9.0.3"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"

[tool.poetry.urls]
"Homepage" = "https://github.com/togethercomputer/together"
"Bug Tracker" = "https://github.com/togethercomputer/together/issues"

[tool.poetry.scripts]
together = "together.cli.cli:main"

[tool.black]
target-version = ['py310']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["together"]

[tool.mypy]
strict = true
mypy_path = "."
