[build-system]
requires = [
    "poetry",
    # Starting with NumPy 1.25, NumPy is (by default) as far back compatible
    # as oldest-support-numpy was (customizable with a NPY_TARGET_VERSION
    # define).  For older Python versions (where NumPy 1.25 is not yet avaiable)
    # continue using oldest-support-numpy.
    "oldest-supported-numpy>=0.14; python_version<'3.9'",
    "numpy>=1.25; python_version>='3.9'",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "together"
version = "1.2.4"
authors = [
    "Together AI <support@together.ai>"
]
description = "Python client for Together's Cloud Platform!"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
repository = "https://github.com/togethercomputer/together-python"
homepage = "https://github.com/togethercomputer/together-python"

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.9,<0.13"
requests = "^2.31.0"
tqdm = "^4.66.2"
tabulate = "^0.9.0"
pydantic = "^2.6.3"
aiohttp = "^3.9.3"
filelock = "^3.13.1"
eval-type-backport = ">=0.1.3,<0.3.0"
click = "^8.1.7"
pillow = "^10.3.0"
pyarrow = ">=10.0.1"
numpy = [
    { version = ">=1.23.5", python = "<3.12" },
    { version = ">=1.26.0", python = ">=3.12" },
]

[tool.poetry.group.quality]
optional = true

[tool.poetry.group.quality.dependencies]
black = ">=23.1,<25.0"
ruff = ">=0.3.2,<0.5.0"
types-tqdm = "^4.65.0.0"
types-tabulate = "^0.9.0.3"
pre-commit = "3.5.0"
types-requests = "^2.31.0.20240218"
pyarrow-stubs = "^10.0.1.7"
mypy = "^1.9.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=7.4.2,<9.0.0"
pytest-watch = "^4.2.0"
tox = "^4.14.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
datasets = "^2.18.0"
transformers = "^4.39.3"


[tool.poetry.urls]
"Homepage" = "https://github.com/togethercomputer/together-python"
"Bug Tracker" = "https://github.com/togethercomputer/together-python/issues"

[tool.poetry.scripts]
together = "together.cli.cli:main"

[tool.black]
target-version = ['py310']

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["together"]

[tool.mypy]
strict = true
mypy_path = "."
